--- a/.github/workflows/pip-services4-commons-dotnet.yml
+++ b/.github/workflows/pip-services4-commons-dotnet.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
     - 'pip-services4-commons-dotnet/**'
-    - 'pip-services4-commons-dotnet/!README.md'
+    - '!pip-services4-commons-dotnet/README.md'
   workflow_dispatch:
 
 env:
