--- a/pip-services4-swagger-dotnet/src/src.csproj
+++ b/pip-services4-swagger-dotnet/src/src.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net8.0</TargetFrameworks>
     <RootNamespace>PipServices4.Swagger</RootNamespace>
     <AssemblyName>PipServices4.Swagger</AssemblyName>
     <ApplicationIcon />
     <Win32Resource />
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Sergey Seroukhov, Danyil Tretiakov</Authors>
-    <Copyright>Conceptual Vision Consulting LLC. 2017-2023</Copyright>
+    <Copyright>Conceptual Vision Consulting LLC. 2017-2024</Copyright>
     <Description>Remove procedure calls swagger for Pip.Services in .NET</Description>
     <Company>Conceptual Vision Consulting LLC.</Company>
     <Product>PipServices4.Swagger</Product>
@@ -20,10 +20,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PipServices4.Commons" Version="0.0.3" />
+    <PackageReference Include="PipServices4.Commons" Version="0.0.4" />
     <PackageReference Include="PipServices4.Components" Version="0.0.3" />
     <PackageReference Include="PipServices4.Rpc" Version="0.0.1" />
-	  <PackageReference Include="PipServices4.Http" Version="0.0.1" />
-	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
+	  <PackageReference Include="PipServices4.Http" Version="0.0.2" />
+	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
   </ItemGroup>
 </Project>
