renamed service <-> controller

--- a/pip-services4-grpc-dotnet/docker/Dockerfile.proto
+++ b/pip-services4-grpc-dotnet/docker/Dockerfile.proto
@@ -12,5 +12,5 @@ RUN apk update && \
     apk add protoc
 
 # Generate
-RUN protoc --proto_path=src/Protos --csharp_out=src/Protos --csharp_opt=file_extension=.cs,base_namespace=PipServices4.Grpc.Services src/Protos/commandable.proto
+RUN protoc --proto_path=src/Protos --csharp_out=src/Protos --csharp_opt=file_extension=.cs,base_namespace=PipServices4.Grpc.Controllers src/Protos/commandable.proto
 RUN protoc --proto_path=example/Protos --csharp_out=example/Protos --csharp_opt=file_extension=.cs,base_namespace=PipServices4.Grpc.Protos example/Protos/dummies.proto
